--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "koishi-plugin-chatluna-cohere-playground-adapter",
-  "description": "Chatluna 的 Cohere Playground 适配器，无甲，免费量大管饱，输出速度快，智商低，瑟瑟文笔逆天，适合纯瑟瑟母猪流用户。",
-  "version": "0.0.3",
+  "description": "Chatluna 的 Cohere 适配器，无甲，免费量大管饱，输出速度快，智商低，瑟瑟文笔逆天，适合纯瑟瑟母猪流用户。",
+  "version": "0.0.4",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "files": [
@@ -30,10 +30,10 @@
     "ai"
   ],
   "dependencies": {
-    "@langchain/core": "^0.2.23"
+    "@langchain/core": "^0.2.24"
   },
   "peerDependencies": {
-    "koishi": "^4.17.11",
-    "koishi-plugin-chatluna": "^1.0.0-beta.71"
+    "koishi": "^4.17.12",
+    "koishi-plugin-chatluna": "^1.0.0-beta.74"
   }
 }
